--- a/Tutorial_Estructura_Datos_UMG-V1/pom.xml
+++ b/Tutorial_Estructura_Datos_UMG-V1/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>jlayer-1.0.1</artifactId>
             <version>SNAPSHOT</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itextpdf</artifactId>
+    <version>5.5.13.3</version>
+</dependency>
     </dependencies>
     <properties>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
