--- a/Tutorial_Estructura_Datos_UMG-V1/pom.xml
+++ b/Tutorial_Estructura_Datos_UMG-V1/pom.xml
@@ -6,7 +6,31 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
-         
+      <dependency>
+  <groupId>com.github.sarxos</groupId>
+  <artifactId>webcam-capture</artifactId>
+  <version>0.3.10</version>
+</dependency>  
+
+
+<!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
+<dependency>
+    <groupId>com.google.zxing</groupId>
+    <artifactId>core</artifactId>
+    <version>3.5.0</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/com.google.zxing/javase -->
+<dependency>
+    <groupId>com.google.zxing</groupId>
+    <artifactId>javase</artifactId>
+    <version>3.5.0</version>
+</dependency>
+
+
+
+
+   
                 <!-- https://mvnrepository.com/artifact/com.toedter/jcalendar -->
 <dependency>
     <groupId>com.toedter</groupId>
