--- a/Tutorial_Estructura_Datos_UMG-V1/pom.xml
+++ b/Tutorial_Estructura_Datos_UMG-V1/pom.xml
@@ -105,6 +105,13 @@
             <artifactId>qrgen</artifactId>
             <version>1.3</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.webjars.npm/tiptap__extension-paragraph -->
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>tiptap__extension-paragraph</artifactId>
+            <version>2.0.0-beta.23</version>
+        </dependency>
 
             
     </dependencies>
